--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "notha-socket",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server/index.js"
+  },
   "dependencies": {
     "express": "^4.16.2",
     "socket.io": "^2.0.3"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Will Carpenter <dev.wtc3@gmail.com>",
-  "license": "ISC"
+  "devDependencies": {}
 }
