--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.16.2",
+    "moment": "^2.19.1",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {}
