added script to parse query string

--- a/.eslintrc
+++ b/.eslintrc
@@ -69,14 +69,14 @@
         "guard-for-in": "error",
         "handle-callback-err": "error",
         "id-blacklist": "error",
-        "id-length": "error",
+        "id-length": 0,
         "id-match": "error",
         "indent": "off",
         "indent-legacy": "off",
         "init-declarations": "error",
         "jsx-quotes": "error",
         "key-spacing": "off",
-        "keyword-spacing": "error",
+        "keyword-spacing": 0,
         "line-comment-position": "error",
         "linebreak-style": [
             "error",
@@ -86,19 +86,19 @@
         "lines-around-directive": "error",
         "lines-between-class-members": "error",
         "max-depth": "error",
-        "max-len": "error",
+        "max-len": 0,
         "max-lines": "error",
         "max-nested-callbacks": "error",
-        "max-params": "error",
-        "max-statements": "error",
-        "max-statements-per-line": "error",
+        "max-params": 0,
+        "max-statements": 0,
+        "max-statements-per-line": 0,
         "multiline-comment-style": 0,
         "multiline-ternary": "error",
         "new-cap": "error",
         "new-parens": "error",
         "newline-after-var": 0,
-        "newline-before-return": "error",
-        "newline-per-chained-call": "error",
+        "newline-before-return": 0,
+        "newline-per-chained-call": 0,
         "no-alert": "error",
         "no-array-constructor": "error",
         "no-await-in-loop": "error",
@@ -132,7 +132,7 @@
         "no-lonely-if": "error",
         "no-loop-func": "error",
         "no-magic-numbers": "off",
-        "no-mixed-operators": "error",
+        "no-mixed-operators": 0,
         "no-mixed-requires": "error",
         "no-multi-assign": "error",
         "no-multi-spaces": "off",
@@ -148,7 +148,7 @@
         "no-new-require": "error",
         "no-new-wrappers": "error",
         "no-octal-escape": "error",
-        "no-param-reassign": "error",
+        "no-param-reassign": 0,
         "no-path-concat": "error",
         "no-plusplus": "error",
         "no-process-env": "off",
@@ -189,7 +189,7 @@
         "no-useless-constructor": "error",
         "no-useless-rename": "error",
         "no-useless-return": "error",
-        "no-var": "error",
+        "no-var": 0,
         "no-void": "error",
         "no-warning-comments": "error",
         "no-whitespace-before-property": "error",
@@ -242,8 +242,8 @@
             "never"
         ],
         "valid-jsdoc": "error",
-        "vars-on-top": "error",
-        "wrap-iife": "error",
+        "vars-on-top": 0,
+        "wrap-iife": 0,
         "wrap-regex": "error",
         "yield-star-spacing": "error",
         "yoda": "error"
