able to join individual rooms

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,7 @@
         ],
         "complexity": "error",
         "computed-property-spacing": "error",
-        "consistent-return": "error",
+        "consistent-return": 0,
         "consistent-this": "error",
         "curly": "error",
         "default-case": "error",
@@ -197,7 +197,7 @@
         "nonblock-statement-body-position": "error",
         "object-curly-newline": 0,
         "object-curly-spacing": 0,
-        "object-property-newline": "error",
+        "object-property-newline": 0,
         "object-shorthand": "error",
         "one-var": "off",
         "one-var-declaration-per-line": "error",
