--- a/.eslintrc
+++ b/.eslintrc
@@ -99,7 +99,7 @@
         "newline-after-var": 0,
         "newline-before-return": 0,
         "newline-per-chained-call": 0,
-        "no-alert": "error",
+        "no-alert": 0,
         "no-array-constructor": "error",
         "no-await-in-loop": "error",
         "no-bitwise": "error",
