--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js"
+    "start": "node server/chat.js"
   },
   "dependencies": {
     "express": "^4.16.2",
