--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server/chat.js"
+    "start": "node server/app.js"
   },
   "dependencies": {
     "express": "^4.16.2",
     "moment": "^2.19.1",
+    "nodemon": "^1.12.1",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {}
